# halogen

./: .gitignore  Cargo.toml  README.md
halogen-backend/: Cargo.toml
halogen-backend/src/: lib.rs  rust.rs  utils.rs
halogen-backend/src/rust/templates/: bitfield.tera  block.tera  chip.tera  chips.tera  cm_reg.tera  enum.tera  list.tera  macro.tera  module.tera  peripheral.tera  utils.rs
halogen-cli/: Cargo.toml
halogen-cli/src/: gen_rust.rs  lib.rs  main.rs  stm32_data_convert.rs
halogen-frontend/: Cargo.toml
halogen-frontend/src/: chiptool.rs  lib.rs  stm32_data.rs  utils.rs
halogen-ir/: Cargo.toml
halogen-ir/src/: ir.rs  lib.rs  load.rs  utils.rs
src/: backend.rs  frontend.rs  ir.rs  lib.rs  main.rs  validate.rs
src/backend/: rust.rs
src/backend/c/templates/: example.h  register.tera
src/backend/rust/templates/: bitfield.tera  block.tera  chip.tera  lib.rs.tera  macro.tera  module.tera  register.tera
src/frontend/: chiptool.rs  stm32_data.rs
