[package]
name = "halogen-frontend"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]

[features]
default = ["rayon"]

rayon = ["dep:rayon"]
stm32-data = ["dep:stm32-data-serde", "dep:serde_json", "dep:regex", "chiptool"]
chiptool = ["dep:chiptool", "dep:serde_json"]

[dependencies]
halogen-ir = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }

regex = { version = "1.11", optional = true }
serde_json = { version = "1", optional = true }

[dependencies.stm32-data-serde]
git = "https://github.com/embassy-rs/stm32-data.git"
rev = "ddb0e7abab14bf3e1399875767b8834442382988"
optional = true

[dependencies.chiptool]
git = "https://github.com/embassy-rs/chiptool.git"
rev = "1c198ae678ebd426751513f0deab6fbd6f8b8211"
optional = true