[package]
name = "halogen-ir"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]

[features]
default = ["rayon", "load"]

rayon = ["dep:rayon"]
load = ["dep:serde_json", "dep:heck"]

[dependencies]
rayon = { workspace = true, optional = true }

serde = { version = "1", features = ["derive"] }

serde_json = { version = "1", optional = true }
heck = { version = "0.5", optional = true }